--- a/rtsupport/package.json
+++ b/rtsupport/package.json
@@ -4,17 +4,24 @@
   "description": "Realtime support frontend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production"
   },
   "author": "Lyubomyr Mykhalchyshyn <lyubomyr.dev@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3"
+  },
+  "dependencies": {
+    "react-dom": "^16.8.6"
   }
 }
