--- a/rtsupport/package.json
+++ b/rtsupport/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
+    "fecha": "^3.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
