--- a/rtsupport/package.json
+++ b/rtsupport/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development"
+    "start": "webpack-dev-server --port 4001 --open --mode development"
   },
   "author": "Lyubomyr Mykhalchyshyn <lyubomyr.dev@gmail.com>",
   "license": "MIT",
